fix(data-service): avoid ParsedSql internal accessor